Kubernetes/task_5/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-tools
spec:
  selector:
    matchLabels:
      app: tools
  template:
    metadata:
      labels:
        app: tools
    spec:
      containers:
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - name: tools-port
          containerPort: 8080
