Kubernetes/task_5/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: d-nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ng
  template:
    metadata:
      labels:
        app: ng
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - name: nginx-port
          containerPort: 80
