Kubernetes/task_5/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-svc
spec:
  selector:
    app: tools
  ports:
  - port: 8002
    targetPort: 11443
