Kubernetes/task_5/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
spec:
  selector:
    app: ng
  ports:
  - port: 8001
    targetPort: nginx-port
